Implement the OnSyncQuery API with the passthrough command decoder.

Log info when the error cases are hit to make it easier to debug
synchronization issues.

BUG=825906

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: I5c783a68116ca227e1f2b45329f495d07277fb2e
Reviewed-on: https://chromium-review.googlesource.com/1066176
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Geoff Lang <geofflang@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560674}
Former-commit-id: 85287e1e619d8c64b74412e54a0526e87df71315